refactor(StringParser): 각 클래스의 책임에 맞는 테스트 케이스 재배치
- Separator, CustomSeparatorHandler, StringParser 세개 클래스 테스트로 나뉨
- 각 객체의 역할에 따른 독립적인 테스트를 용이하게 하기 위함